--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,72 +34,34 @@ body{
     width: 100%;
 }
 
-.contenedor{
-    border-radius: 4px;
-    width: 100%;
+
+.navbar{
+    background-color:#556270;
 }
 
-.contenedor{
-    display: grid;
-    grid-template-areas:  "header"
-                            "navbar"
-                            "sidebar"
-                            "main"
-                            "footer";
+.jumbotron {
+    background: #4ECDC4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #556270, #4ECDC4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #556270, #4ECDC4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius: 0;
+    background-image: url(./img/portadahome.png);
+    background-position: center;
 }
-
-.header{
-    
-    height: auto;
-    width: 100%;
-    text-align: center;
-    color: gold;
-    font-size: 30px;
-    padding: 20px;
-    text-shadow: 2px 2px 10px darkslategrey;
-}
-
-.navbar_items {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    padding: 7px 18px;
-}
-
-.navbar_items li a {
-    text-decoration: none;
-    text-shadow: 2px 2px 10px darkslategray;
-    font-size: 20px;
-    color: gold;
-}
-
-.navbar_items li a:hover{
-    color:aqua;
-    transition:  0.2s;
+.jumbotron h1{
+    text-align:center;
+    color: #4ECDC4;
+    text-shadow: 2px 2px 10px #556270;
 }
 
 /*home*/
 
 
-.titulo1{
-    font-size: 11px;
-    color: gold;
-    text-align: center;
-    width: 100%;
-    padding: 20px;
-}
-.titulo1 img{
-    animation: efecto alternate infinite 2s 5s;
-    width: 100%;
-    height: 100%;
-}
-.contenedorSubtitulo1 p{
-    border: 3px solid darkslategrey;
-    padding: 10px;
-}
+
+
 .contenedorSubtitulo1 p:hover{
     color:aqua;
     transition: 2s;
+    text-shadow: 2px 2px 10px #556270;
 }
 .main{
     text-align: justify;
@@ -107,151 +69,96 @@ body{
     padding: 20px;
 }
 
-.main h2{
+.main h3{
     padding: 20px;
-    text-align: center;
-    text-shadow: 2px 2px 10px darkslategray;
-    color:gold;
-    font-size: 25px;
+    text-align: left;
+    text-shadow: 2px 2px 10px#556270;
+    color:#4ECDC4;
+    font-size: 30px;
 }
 .main p{
-    color: gold;
+    color:#556270;
     height: 100%;
 }
 
 /*news*/
-
-.news{
-    font-size: 30px;
-    color: gold;
-    text-shadow: 2px 2px 10px darkslategray;
+.tituloNews{
+    color:#4ECDC4;
+    text-shadow: 2px 2px 10px#556270;
     text-align: center;
-    padding: 25px;
+    padding: 10px;
 }
-.articulo1{
+
+.art h3{
+    text-align: center;
+    font-size: 30px;
+    color:#4ECDC4;
+    text-shadow: 2px 2px 10px#556270;
+}
+.art p{
+    color:#4ECDC4;
+    text-shadow: 2px 2px 10px#556270;
+    font-size: 18px;
+    text-align: justify;
+}
+.art2{
+    color:#556270;
+    text-shadow: 2px 2px 10px#4ECDC4;
+    text-align: justify;
+}
+
+/*band*/
+
+.tituloBand{
+    color: #4ECDC4;
+    text-align: center;
+    font-size: 30px;
+    text-shadow: 2px 2px 5px #556270;
+    padding: 10px;
+}
+
+.band{
     font-size: 15px;
     text-align: center;
-    color: gold;
+    color: #4ECDC4;
     padding: 20px;
-    height: 100%;
+    text-shadow: 2px 2px 5px #556270;
+}
+.imagenBand{
     width: 100%;
-}
-.seccion1 h3{
-    text-align: center;
-    font-size: 18px;
-}
-.seccion2 h3{
-    text-align: center;
-    font-size: 18px;
-}
-.seccion3{
     padding: 20px;
-    font-size: 18px;
-    text-align: center;
+    box-shadow: 2px 2px 5px #556270;
 }
 
 /*music*/
 
-.music{
+.tituloMusic{
     font-size: 15px;
     text-align: center;
     padding: 20px;
-    color:gold;
+    color:#4ECDC4;
+    text-shadow: 2px 2px 10px#556270;
 }
-.musicSect{
-    padding: 30px;
-}
+
 .musicbox{
     padding: 10px;
 }
 
 /*galery*/
 
-.galeria{
-    width: 100%;
-    height: auto;
-}
 
-.titulogaleria{
+
+.tituloGaleria{
     font-size: 30px;
-    color: gold;
+    color: #4ECDC4;
     padding: 20px;
-    text-shadow: 2px 2px 5px darkslategray;
+    text-shadow: 2px 2px 10px #4ECDC4;
+}
+.carousel-inner img{
+    width: 100%;
+    height: 100%;
 }
 
-.item{
-    height: 300px;
-    margin: 20px;
-    box-shadow: 2px 2px 5px gold;
-}
-
-.item:hover{
-    transform: scale(1.05);
-    transition: all 0.7s;
-    
-}
-
-.item1{
-    background-image: url(../img/imagen8.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position:center;
-}
-
-
-.item2{
-    background-image: url(../img/IMAGEN6.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-
-.item3{
-    background-image: url(../img/floor.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top;
-}
-
-
-
-.item4{
-    background-image: url(../img/imagen7jpg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-
-.item5{
-    background-image: url(../img/imagen9.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: top;
-}
-
-
-.item6{
-    background-image: url(../img/imagen18.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position:top;
-}
-
-.item7{
-    background-image: url(../img/imagen11.webp);
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: top;
-}
-
-.item8{
-    background-image: url(../img/imagen15.webp);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position:top;
-}
 
 .video{
     width: 100%;
@@ -259,62 +166,38 @@ body{
 }
 .tituloVideo{
     font-size: 20px;
-    color: gold;
+    color: #4ECDC4;
     padding: 20px;
-    text-shadow: 2px 2px 5px darkslategray;
+    text-shadow: 2px 2px 10px #4ECDC4;
 }
 .videoItem iframe{
     height: 300px;
     margin: 20px;
 }
 
-/*band*/
 
-.secBand{
-    height: auto;
-    width: 100%;
-}
-
-
-.band{
-    font-size: 15px;
-    color: gold;
-    padding: 20px;
-    text-shadow: 2px 2px 5px darkslategray;
-}
-
-.integrantes{
-    font-size: 15px;
-    text-align: center;
-    color: gold;
-    padding: 20px;
-}
-
-.imagenBand{
-    height: 100%;
-    width: 80%;
-    padding: 20px;
-}
 
 /*contact*/
 
 .contacto{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: auto;
+    text-shadow: 2px 2px 10px #4ECDC4;
 }
 
 .contactoItem1 {
     font-size: 25px;
-    color: gold;
+    color: #4ECDC4;
     padding: 20px;
-    text-shadow: 2px 2px 5px darkslategray;
+    text-shadow: 2px 2px 5px #556270;
 }
 
 .contactoItem1 p{
     font-size: 15px;
     text-align: justify;
-    color: gold;
-    padding: 20px;
+    color: #4ECDC4;
+    padding: 30px;
 }
 
 .contactoItem2{
@@ -322,14 +205,12 @@ body{
     flex-direction: row;
     justify-content: center;
     padding: 20px;
-    color: gold;
+    color: #4ECDC4;
 }
 .caja {
-    display: flex;
-    flex-direction: column;
     border-radius: 5px;
     margin: 10px;
-    background-color: gold;
+    background-color: #556270;
 }
 
 .boton{
@@ -341,9 +222,10 @@ body{
 }
 .boton:hover{
     background-color: cadetblue;
-    box-shadow: 0 0 10px gold, 0 0 40px gold, 0 0 80px gold;
-    color:gold;
-    padding: 5px;
+    box-shadow: 0 0 10px #4ECDC4, 0 0 40px #4ECDC4, 0 0 80px #4ECDC4;
+    color:#4ECDC4;
+
+    transform:translateY(10px);
     transition-delay: 0.2s;
 }
 
@@ -360,33 +242,34 @@ body{
 .redes i{
         font-size: 35px;
         text-align: center;
-        color:darkgoldenrod;
+        color: #556270;
         letter-spacing: 20px;
         padding: 5px;
     }
 
 #color:hover{
-        color: blue;
+        color:#4ECDC4;
     }
 #color2:hover{
-        color:rgb(225 48 108);
+        color:#4ECDC4;
     }
 #color3:hover{
-        color: rgb(30 215 96);
+        color:#4ECDC4;
     }
 #color4:hover{
-        color:rgb(255 0 0);
+        color:#4ECDC4;
     }
 
 .copiryght{
     text-align: left;
-    color:gold;
+    color:#4ECDC4;
+    text-shadow: 2px 2px 10px #4ECDC4;
     padding: 20px;
 }
 .subir{
         height: 30px;
         width: 30px;
-        background-color:gold;
+        background-color:#4ECDC4;
         position: fixed;
         bottom: 20px;
         right: 20px;
@@ -410,7 +293,7 @@ body{
     /*medias*/
 
 
-    @media only screen and (min-width: 440px) and (max-width:580px) {
+    /*@media only screen and (min-width: 440px) and (max-width:580px) {
         .contenedor{
             display: grid;
             grid-template-areas:  "header"
@@ -456,7 +339,7 @@ body{
         }
     }
 
-    @media only screen and (min-width: 580px) and (max-width:900px) {
+    /*@media only screen and (min-width: 580px) and (max-width:900px) {
         .contenedor{
             display: grid;
             grid-template-areas:  "header"
