--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,7 +44,7 @@ body{
     background: -webkit-linear-gradient(to right, #556270, #4ECDC4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #556270, #4ECDC4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border-radius: 0;
-    background-image: url(/img/portadahome.png);
+    background-image: url(../img/portadahome.png);
     background-position: center;
 }
 .jumbotron h1{
