--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,42 +15,62 @@ font-family: 'Shadows Into Light', cursive;*/
 
 
 
-* { margin: 0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    }
+}
 
-html{
+html {
     scroll-behavior: smooth;
     height: 100%;
 }
 
-body{
-    background: #4ECDC4;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #556270, #4ECDC4);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #556270, #4ECDC4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+body {
+    background: #4ECDC4;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #556270, #4ECDC4);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #556270, #4ECDC4);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Bangers', cursive;
     min-height: 100%;
     width: 100%;
 }
 
 
-.navbar{
-    background-color:#556270;
+.navbar {
+    background-color: -webkit-linear-gradient(to right, #556270, #4ECDC4);
+    /* Chrome 10-25, Safari 5.1-6 */
 }
 
 .jumbotron {
-    background: #4ECDC4;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #556270, #4ECDC4);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #556270, #4ECDC4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #4ECDC4;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #556270, #4ECDC4);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #556270, #4ECDC4);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     border-radius: 0;
     background-image: url(../img/portadahome.png);
     background-position: center;
 }
-.jumbotron h1{
-    text-align:center;
+
+.jumbotron h1 {
+    text-align: center;
     color: #4ECDC4;
     text-shadow: 2px 2px 10px #556270;
+    animation: tituloJumbotron 2s ease 6s infinite alternate;
+}
+
+@keyframes tituloJumbotron {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 /*home*/
@@ -58,58 +78,63 @@ body{
 
 
 
-.contenedorSubtitulo1 p:hover{
-    color:aqua;
+.contenedorSubtitulo1 p:hover {
+    color: aqua;
     transition: 2s;
     text-shadow: 2px 2px 10px #556270;
 }
-.main{
+
+.main {
     text-align: justify;
     line-height: 20px;
     padding: 20px;
 }
 
-.main h3{
+.main h3 {
     padding: 20px;
     text-align: left;
     text-shadow: 2px 2px 10px#556270;
-    color:#4ECDC4;
+    color: #4ECDC4;
     font-size: 30px;
 }
-.main p{
-    color:#556270;
+
+.main p {
+    color: #556270;
     height: 100%;
 }
 
 /*news*/
-.tituloNews{
-    color:#4ECDC4;
+
+.tituloNews {
+    color: #4ECDC4;
     text-shadow: 2px 2px 10px#556270;
     text-align: center;
     padding: 10px;
 }
 
-.art h3{
+.art h3 {
     text-align: center;
     font-size: 30px;
-    color:#4ECDC4;
+    color: #4ECDC4;
     text-shadow: 2px 2px 10px#556270;
 }
-.art p{
-    color:#4ECDC4;
+
+.art p {
+    color: #4ECDC4;
     text-shadow: 2px 2px 10px#556270;
     font-size: 18px;
     text-align: justify;
 }
-.art2{
-    color:#556270;
+
+.art2 {
+    color: #556270;
     text-shadow: 2px 2px 10px#4ECDC4;
     text-align: justify;
 }
 
 /*band*/
 
-.tituloBand{
+.tituloBand {
     color: #4ECDC4;
     text-align: center;
     font-size: 30px;
@@ -117,14 +142,15 @@ body{
     padding: 10px;
 }
 
-.band{
+.band {
     font-size: 15px;
     text-align: center;
     color: #4ECDC4;
     padding: 20px;
     text-shadow: 2px 2px 5px #556270;
 }
-.imagenBand{
+
+.imagenBand {
     width: 100%;
     padding: 20px;
     box-shadow: 2px 2px 5px #556270;
@@ -132,15 +158,15 @@ body{
 
 /*music*/
 
-.tituloMusic{
+.tituloMusic {
     font-size: 15px;
     text-align: center;
     padding: 20px;
-    color:#4ECDC4;
+    color: #4ECDC4;
     text-shadow: 2px 2px 10px#556270;
 }
 
-.musicbox{
+.musicbox {
     padding: 10px;
 }
 
@@ -148,29 +174,33 @@ body{
 
 
 
-.tituloGaleria{
+.tituloGaleria {
     font-size: 30px;
     color: #4ECDC4;
     padding: 20px;
     text-shadow: 2px 2px 10px #4ECDC4;
 }
-.carousel-inner img{
+
+.carousel-inner img {
     width: 100%;
     height: 100%;
+    padding: 10px;
 }
 
 
-.video{
+.video {
     width: 100%;
     height: auto;
 }
-.tituloVideo{
+
+.tituloVideo {
     font-size: 20px;
     color: #4ECDC4;
     padding: 20px;
     text-shadow: 2px 2px 10px #4ECDC4;
 }
-.videoItem iframe{
+
+.videoItem iframe {
     height: 300px;
     margin: 20px;
 }
@@ -179,7 +209,7 @@ body{
 
 /*contact*/
 
-.contacto{
+.contacto {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -193,107 +223,116 @@ body{
     text-shadow: 2px 2px 5px #556270;
 }
 
-.contactoItem1 p{
+.contactoItem1 p {
     font-size: 15px;
     text-align: justify;
     color: #4ECDC4;
     padding: 30px;
 }
 
-.contactoItem2{
+.contactoItem2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding: 20px;
     color: #4ECDC4;
 }
+
 .caja {
     border-radius: 5px;
     margin: 10px;
     background-color: #556270;
 }
 
-.boton{
-    background-color:darkgray;
+.boton {
+    background-color: darkgray;
     font-size: 15px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px darkslategray;
 }
-.boton:hover{
-    background-color: cadetblue;
-    box-shadow: 0 0 10px #4ECDC4, 0 0 40px #4ECDC4, 0 0 80px #4ECDC4;
-    color:#4ECDC4;
 
-    transform:translateY(10px);
+.boton:hover {
+    background-color: #556270;
+    box-shadow: 0 0 10px #4ECDC4, 0 0 40px #4ECDC4, 0 0 80px #4ECDC4;
+    color: #4ECDC4;
+    transform: translateY(10px);
     transition-delay: 0.2s;
 }
 
 /*footer*/
 
 
-.footer{
+.footer {
     text-align: center;
     height: 100%;
     width: 100%;
     padding: 25px;
 }
 
-.redes i{
-        font-size: 35px;
-        text-align: center;
-        color: #556270;
-        letter-spacing: 20px;
-        padding: 5px;
-    }
+.redes i {
+    font-size: 35px;
+    text-align: center;
+    color: #556270;
+    letter-spacing: 20px;
+    padding: 5px;
+}
 
-#color:hover{
-        color:#4ECDC4;
-    }
-#color2:hover{
-        color:#4ECDC4;
-    }
-#color3:hover{
-        color:#4ECDC4;
-    }
-#color4:hover{
-        color:#4ECDC4;
-    }
+#color:hover {
+    color: #4ECDC4;
+}
 
-.copiryght{
+#color2:hover {
+    color: #4ECDC4;
+}
+
+#color3:hover {
+    color: #4ECDC4;
+}
+
+#color4:hover {
+    color: #4ECDC4;
+}
+
+.copiryght {
     text-align: left;
-    color:#4ECDC4;
+    color: #4ECDC4;
     text-shadow: 2px 2px 10px #4ECDC4;
     padding: 20px;
 }
-.subir{
-        height: 30px;
-        width: 30px;
-        background-color:#4ECDC4;
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        text-align:center;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-size: 20px;
-        line-height: 30px;
-        color: white;
-        border: 50% ;
-        border-radius: 30%;
-        box-shadow: 0 0 10px darkslategrey;
+
+.subir {
+    height: 30px;
+    width: 30px;
+    background-color: #4ECDC4;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    color: white;
+    border: 50%;
+    border-radius: 30%;
+    box-shadow: 0 0 10px darkslategrey;
+}
+
+@keyframes efecto {
+    0% {
+        opacity: 0;
     }
-    @keyframes efecto {
-        0%{opacity:0;
-        } 
-        100%{opacity:1;
-        } 
+
+    100% {
+        opacity: 1;
     }
+}
 
 
-    /*medias*/
+/*medias*/
 
 
-    /*@media only screen and (min-width: 440px) and (max-width:580px) {
+/*@media only screen and (min-width: 440px) and (max-width:580px) {
         .contenedor{
             display: grid;
             grid-template-areas:  "header"
